--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "license": "ISC",
     "dependencies": {
         "eslint": "^7.29.0",
-        "nodemon": "^2.0.7",
-        "prettier": "^2.2.1"
+        "nodemon": "^2.0.7"
+    },
+    "devDependencies": {
+        "prettier": "2.2.1"
     }
 }
