--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "eslint": "^7.29.0",
+        "express": "^4.17.1",
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.7"
     },
     "devDependencies": {
