--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
-        "eslint": "^7.29.0",
-        "express": "^4.17.1",
-        "morgan": "^1.10.0",
-        "nodemon": "^2.0.7"
+        "body-parser": "1.19.0",
+        "cors": "2.8.5",
+        "eslint": "7.29.0",
+        "express": "4.17.1",
+        "morgan": "1.10.0",
+        "nodemon": "2.0.7",
+        "sequelize": "6.6.4",
+        "sqlite3": "5.0.2"
     },
     "devDependencies": {
         "prettier": "2.2.1"
