--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "eslint": "7.29.0",
         "express": "4.17.1",
         "morgan": "1.10.0",
+        "mysql2": "2.3.3",
         "nodemon": "2.0.7",
         "sequelize": "6.6.4",
         "sqlite3": "5.0.2"
